# gemini_cli_gui

./: .gitignore  CMakeLists.txt  agent_manager.cpp  agent_manager.h  agent_prompt_builder.cpp  agent_prompt_builder.h  base_agent_action.h  chat_formatter.cpp  chat_formatter.h  chat_syntax_highlighter.cpp  chat_syntax_highlighter.h  database_manager.cpp  database_manager.h  execute_code_action.cpp  execute_code_action.h  execute_shell_action.cpp  execute_shell_action.h  ftp_upload_action.cpp  ftp_upload_action.h  gemini_api_client.cpp  gemini_api_client.h  gemini_payload_builder.cpp  gemini_payload_builder.h  git_manager_action.cpp  main.cpp  main_window.cpp  main_window.h  session_dialog.cpp  session_dialog.h  settings_dialog.cpp  settings_dialog.h  take_screenshot_action.cpp  take_screenshot_action.h  theme_manager.h  tool_schema_provider.cpp  tool_schema_provider.h  write_file_action.cpp  write_file_action.h
agent/: agent_manager.cpp  agent_manager.h  agent_prompt_builder.cpp  agent_prompt_builder.h  gemini_api_client.cpp  gemini_api_client.h  gemini_payload_builder.cpp  gemini_payload_builder.h
data/: chat_formatter.cpp  chat_formatter.h  database_manager.cpp  database_manager.h  session_dialog.cpp  session_dialog.h
settings/: settings_dialog.cpp  settings_dialog.h  theme_manager.h
tools/: base_agent_action.h  execute_shell_action.cpp  execute_shell_action.h  ftp_upload_action.cpp  ftp_upload_action.h  git_manager_action.cpp  git_manager_action.h  take_screenshot_action.cpp  take_screenshot_action.h  tool_schema_provider.cpp  tool_schema_provider.h  write_file_action.cpp  write_file_action.h
